2009-06-20  Douglas Bates <bates@stat.wisc.edu>

	* src/CHMfactor.c: Ensure updated LL stays LL

2009-06-10  Douglas Bates <bates@stat.wisc.edu>

	* [r2404] src/Mutils.c: Change value of set_factor to be the cached factor
	* [r2403] src/dgCMatrix.c, src/dgCMatrix.h, src/init.c: Comment out
	  unused dgCMatrix_lusol function
	* [r2402] R/dgCMatrix.R: R-level implementation of solve("dgCMatrix",
	  "missing")
	* [r2401] src/dgCMatrix.c: Re-arrange LU factorization to always use the
	  cached value.

2009-06-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-29, CRAN-released: 2009-06-11

2009-06-09  Douglas Bates <bates@stat.wisc.edu>

	* [r2399] src/dgCMatrix.c: PROTECT the result from dgCMatrix_LU in
	  dgCMatrix_matrix_solve

2009-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R: add numeric -> Tsparse* coercion

2009-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Mutils.h, src/dgeMatrix.c: using dngettext(.) only
	on future versions of R.

2009-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-28, CRAN-released: 2009-06-08

	* po/de.po, po/R-de.po: German translations from Chris Leick.
	* inst/po/de/: ditto, via po/update-me.sh

2009-05-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c, src/cs_utils.c, etc: internationalize more
	messages; fix some; thanks to feedback from Chris Leick.

2009-05-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/denseMatrix-class.Rd, etc: 'factors' is *not* a slot in this
	class; found by the upcoming R 2.10.0 codocClasses().

2009-05-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* po/update-me.sh, Matrix.pot, etc: updated *.pot / *.po files

	* DESCRIPTION (Version, Date): 0.999375-27, CRAN-released today.

	* R/sparseVector.R: add as(<atomic>, "dsparseVector")
	(spV2M): now works (again!?) for "isparseVector" (-> "dgTMatrix").
